# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  21 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Added fetch restrictions to workstation-6.
  Change the icon installation also.
  
  20 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Removed old expired vmware-workstations.
  Added new vmware-workstation ebuild.

  26 May 2007; Mike Auty <ikelos@gentoo.org>:
  Update vmware-modules-1.0.0.16 and for the new vmware-player-2.0 which was also added.
  Fixed up amd64 PAM settings in vmware-server hopefully.

  08 May 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up update-modules in postinst.
  
  08 May 2007; Mike Auty <ikelos@gentoo.org>:
  Add in a patch for server-tools on >=2.6.20.

  07 May 2007; Mike Auty <ikelos@gentoo.org>:
  Cleanup and resync vmware-server ebuilds with tree.
  
  29 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Eagle eyed Percy Jahn spotted the typo in vmware-mod.eclass,
  which is now fixed.
  
  29 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Forgot to bump vmware server console at the same time.
  
  28 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Version bump vmware server 1.0.3.44356.
  Fixed up vmware-workstation-6 ebuild to support native amd64.
  
  23 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/files/vmware-workstation.rc:
  Added use hald to vmware-workstation init script due to bug #155450.

  22 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Version bumped vmware workstation 6.0.0.44426.
  Problems still existing with the beta:
  	Using gnome-2.18.0 seems to be missing a symbol.
	Using baselayout-2 the config trying to stop a stopped service fails.
	The application icons don't install/work properly.
  
  18 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-6.0.0.36983.ebuild:
  Changed x11-libs/libsexymm to dev-cpp/libsexymm to match what's in the tree.