@@ -37,10 +37,10 @@ SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vm
 DIST VMware-workstation-6.0.0-45731.i386.tar.gz 190053947 RMD160 cb20bebe843ef7ae6b0fe3155b61bd8d29fbdaa2 SHA1 2daa71872b1e03f01843a918c7301c7b577585a7 SHA256 6781820f88c2321ecd9fe12f1a228703717b92447565cef40648789dde06e698
 DIST VMware-workstation-6.0.0-45731.x86_64.tar.gz 166956169 RMD160 355db06ad645032ce575deb8afea2c7e1d53dff3 SHA1 3a57951e6771faa065d6e75ba01b44bd6dd3462a SHA256 b6a46596f17e67cd1473a82844fc2828a48af81d088a7ae3908d3092f754a842
 DIST vmware-any-any-update109.tar.gz 295773 RMD160 823b961d7b8f8a97af02f0bb2ed775fa5840ec54 SHA1 504380f59620ce47197975d5b326129fae6d7019 SHA256 392dd7d4fd990efcbd664f982d71e8ad8ba1d08425ab37e640a1bee0909b67a8
-EBUILD vmware-workstation-6.0.0.45731.ebuild 3713 RMD160 bbeb4ab04e2902290985f5633987459d8f342c40 SHA1 2089871f03ff62ff1a846abd604f076028efc9f7 SHA256 e647f6a60d3e3c48b0c8dde15dcc6d507aca89212504765d95f6f5b590e1f2b8
-MD5 2840a1171c65369c9b887b810b78a77b vmware-workstation-6.0.0.45731.ebuild 3713
-RMD160 bbeb4ab04e2902290985f5633987459d8f342c40 vmware-workstation-6.0.0.45731.ebuild 3713
-SHA256 e647f6a60d3e3c48b0c8dde15dcc6d507aca89212504765d95f6f5b590e1f2b8 vmware-workstation-6.0.0.45731.ebuild 3713
+EBUILD vmware-workstation-6.0.0.45731.ebuild 3841 RMD160 67e1445458cb7123cd4372c1a057fa4ad94f9444 SHA1 e8d50771cc6d818f3c00c9b195e854f962bb048d SHA256 c31562a7b2df7c4a57d31b9c10b6174c3ee00cf4db3de1d24a8e0cb3003fb8f0
+MD5 ba913f1036daa5c06d048cffc54a1e76 vmware-workstation-6.0.0.45731.ebuild 3841
+RMD160 67e1445458cb7123cd4372c1a057fa4ad94f9444 vmware-workstation-6.0.0.45731.ebuild 3841
+SHA256 c31562a7b2df7c4a57d31b9c10b6174c3ee00cf4db3de1d24a8e0cb3003fb8f0 vmware-workstation-6.0.0.45731.ebuild 3841
 MISC ChangeLog 12691 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac SHA1 d8e4b3b6d88469777866d80b513777171951a10c SHA256 af61d26d4fab464194c25841ce6dc6050dc5828ebe3eaf170dc531f627d7be7c
 MD5 3d2f699f8c2e2a402636dfc0f5822dda ChangeLog 12691
 RMD160 c2004f093d1479978d7c0bb3a0d155851a577eac ChangeLog 12691
